Adding Roles for each endpoint as well as user creation