@@ -7,39 +7,50 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class FirebaseTokenFilter extends OncePerRequestFilter {
+
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
+
         String header = request.getHeader("Authorization");
+
         if (header != null && header.startsWith("Bearer ")) {
-            String idToken = header.substring(7);
+            String token = header.substring(7);
             try {
-                FirebaseToken decoded = FirebaseAuth.getInstance().verifyIdToken(idToken);
-                UsernamePasswordAuthenticationToken auth =
-                        new UsernamePasswordAuthenticationToken(
-                                decoded.getUid(),
-                                null,
-                                Collections.emptyList()
-                        );
-                SecurityContextHolder.getContext().setAuthentication(auth);
+                FirebaseToken firebaseToken = FirebaseAuth.getInstance().verifyIdToken(token);
+                String uid = firebaseToken.getUid();
+                String role = (String) firebaseToken.getClaims().get("role");
+
+                if (role == null) role = "USER";
+
+                List<GrantedAuthority> authorities =
+                        List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(uid, null, authorities);
+
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+
             } catch (FirebaseAuthException e) {
-                response.sendError(HttpStatus.UNAUTHORIZED.value(), "Invalid Firebase token");
+                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid Firebase token");
                 return;
             }
         }
+
         filterChain.doFilter(request, response);
     }
 }
